--- a/src/components/organisms/ArticlePopup/index.scss
+++ b/src/components/organisms/ArticlePopup/index.scss
@@ -57,6 +57,7 @@
     }
     img {
       width: 100%;
+      height: auto;
       border-radius: 25px;
     }
     p,
