--- a/src/components/organisms/Intro/index.scss
+++ b/src/components/organisms/Intro/index.scss
@@ -17,11 +17,9 @@
     margin: 0 auto;
     z-index: -2;
     position: relative;
+    top: 12vw;
     @media screen and (min-width: 768px) {
       max-width: 483px;
-      top: 7vw;
-    }
-    @media screen and (min-width: 1280px) {
       top: 10vw;
     }
     @media screen and (min-width: 1440px) {
@@ -30,9 +28,6 @@
     @media screen and (min-width: 1680px) {
       top: 6vw;
     }
-    // @media screen and (min-width: 1680px) {
-    //   top: 60px;
-    // }
     img {
       width: 100%;
       height: auto;
