--- a/src/layouts/Home/index.scss
+++ b/src/layouts/Home/index.scss
@@ -17,6 +17,7 @@
   position: relative;
   z-index: 3;
   margin-bottom: -30px;
+  pointer-events: none;
   @media screen and (min-width: 1024px) {
     margin-bottom: -90px;
   }
