--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -41,6 +41,8 @@ body {
   left: 0;
   z-index: 11;
   pointer-events: none;
+  width: 100%;
+  height: 100%;
 }
 
 .footer {
